# TwitterSpam

./: main.py  pyproject.toml  routes.py
templates/: about.html  base.html  config.html  index.html
